--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>at.downdrown.vaadinaddons</groupId>
+			<artifactId>highchartsapi</artifactId>
+			<version>2.2.1-QF</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -156,6 +162,11 @@
 						<enabled>true</enabled>
 					</snapshots>
 				</repository>
+				<repository>
+					<id>vaadin-addons</id>
+					<url>http://maven.vaadin.com/vaadin-addons</url>
+				</repository>
+
 			</repositories>
 			<pluginRepositories>
 				<pluginRepository>
@@ -175,5 +186,6 @@
 			</pluginRepositories>
 		</profile>
 	</profiles>
+
 
 </project>
